Misc: Remove Firebase, Maps and location dependencies from free version